src/test/rustdoc-ui/doc-without-codeblock.stderr
error: Missing code example in this documentation
   |
note: lint level defined here
  --> $DIR/doc-without-codeblock.rs:3:9
   |
LL | #![deny(missing_doc_code_examples)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: Missing code example in this documentation
  --> $DIR/doc-without-codeblock.rs:5:1
   |
LL | /// Some docs.
   | ^^^^^^^^^^^^^^

error: Missing code example in this documentation
  --> $DIR/doc-without-codeblock.rs:9:1
   |
LL | /// And then, the princess died.
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Missing code example in this documentation
  --> $DIR/doc-without-codeblock.rs:12:5
   |
LL |     /// Or maybe not because she saved herself!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

